Closed
Bug 1080296
Opened 11 years ago
Closed 11 years ago
Clear out glGetError after checking it once
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
mozilla35
People
(Reporter: jgilbert, Assigned: jgilbert)
Details
Attachments
(1 file)
|
781 bytes,
patch
|
u480271
:
review+
|
Details | Diff | Splinter Review |
After checking glGetError, we can't just assume that it's cleared. We need to keep calling it until it returns NO_ERROR.
If we don't do this, I get assertions on my Mac.
Attachment #8502169 -
Flags: review?(dglastonbury)
Attachment #8502169 -
Flags: review?(dglastonbury) → review+
| Assignee | ||
Comment 1•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in
before you can comment on or make changes to this bug.
Description
•