Bug 1080296 - Clear out glGetError after checking it. - r=kamidphish